Fix blurry text bug on credits page. Update layout of credits page.

--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,7 @@ body.no-scroll {
     width: 100% !important;
 }
 
-#main-title {
+/* #main-title {
     display: none;
 }
 
@@ -117,7 +117,7 @@ body.no-scroll {
 
 #about {
     display: none;
-}
+} */
 
 #main-title h1 {
     background-clip: text;
@@ -1064,11 +1064,6 @@ body.no-scroll {
     transform: rotateY(0deg) rotateX(80deg);
 }
 
-@keyframes deskspin {
-    0% {transform: rotateY(0deg) rotateX(60deg)}
-    100% {transform: rotateY(360deg) rotateX(60deg)}
-}
-
 .styled #link-box {
     display: flex;
     flex-direction: column;
@@ -1139,7 +1134,7 @@ body.no-scroll {
 
 .styled #contact-box>#coin-box #coin {
     background-color: goldenrod;
-    border: 2px solid black;
+    border: 2px solid rgb(124, 90, 3);
     width: 10rem;
     height: 10rem;
 
@@ -1159,6 +1154,7 @@ body.no-scroll {
 }
 
 .styled #contact-box>#coin-box #coin>.coin-side {
+    border: 2px solid rgb(124, 90, 3);
     width: 10%;
     transform: translate(-50%, -50%) rotate(0deg) translate(100%, 0) rotateY(90deg) translate(50%, 0%);
     background-color: rgb(163, 121, 14);
@@ -1166,7 +1162,7 @@ body.no-scroll {
 
 .styled #contact-box>#coin-box #coin>#coin-2 {
     background-color: goldenrod;
-    border: 2px solid black;
+    border: 2px solid rgb(124, 90, 3);
     transform: translate(-50%, -50%) translateZ(-1rem);
 
     display: flex;
@@ -1403,24 +1399,30 @@ body.no-scroll {
     top: 50%;
     left: 50%;
 
-    height: 35rem;
-    width: 75%;
+    font-size: 0.5rem;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+    width: 37.5%;
     background-color: var(--dark-tan);
     color: black;
 
     transform-style: preserve-3d;
-    transform: translate(-50%, -50%) rotateX(90deg);
+    transform-origin: center;
+    transform: translate(-50%, -50%) rotateX(90deg) scale(2, 2) ;
 
     transition: all 1s cubic-bezier(.35, .04, 0, 1.1);
 }
 
 .styled #credits-page.credits-hover {
-    transform: translate(-50%, -50%) rotateX(90deg) translateY(15rem);
+    transform: translate(-50%, -50%) rotateX(90deg) translateY(15rem) scale(2, 2) ;
 }
 
 .styled #credits-page.credits-angled {
-    transform-origin: center;
-    transform: translate(-50%, -50%) rotateX(180deg) translateY(15rem) translateZ(-50px);
+    transform: translate(-50%, -50%) rotateX(180deg) translateY(15rem) translateZ(-50px) scale(2, 2) ;
 }
 
 .styled #credits-header {
@@ -1435,16 +1437,41 @@ body.no-scroll {
 }
 
 .styled #credits-text {
-    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
 
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    height: 100%;
-    width: 100%;
     padding: 10px;
+    height: 100%;
 
     transform-style: preserve-3d;
     transform: scaleY(-1) translateZ(-1px);
+}
+
+.styled #credits-text h4 {
+    margin: 0;
+}
+
+.styled #credits-text ul {
+    padding: 0 0 0 10px;
+}
+
+.styled #credits-page>#credits-text .contact-link.box-2d {
+    height: 2rem;
+    transform: rotateX(180deg) translateZ(-0px);
+
+    transform-style: flat;
+}
+
+.styled #credits-page>#credits-text .contact-link.box-2d:hover {
+    transform-style: preserve-3d;
+}
+
+.styled #credits-page>#credits-text .contact-link.box-2d>div:not(.btn-face) {
+    transform: scaleY(-1);
+    font-size: 1rem;
+
+    padding: 10px;
 }
